<resources>
    <string name="app_name">Unidad1</string>
    <string name="calculate">calculate</string>
    <string name="second_number">second number</string>
    <string name="first_number">first number</string>
    <string name="operation_one">Operation One</string>
    <string name="operation_two">Operation Two</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="y">Y</string>
    <string name="x">X</string>
</resources>
